--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,19 @@
 
-FROM node:14 AS build
+FROM node:20.19.1 AS build
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
+
+COPY package*.json ./
+RUN npm install --legacy-peer-deps
+
 
 COPY . .
-
 RUN npm run build --prod
 
-FROM nginx:alpine
+FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expose port 80 for the frontend service
+# Expose port 80 to serve the app
 EXPOSE 80
 
-# Run nginx in the foreground
+# Run NGINX in the foreground
 CMD ["nginx", "-g", "daemon off;"]
