--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,21 @@
-
-FROM node:20.19.1 AS build
+# --- Stage 1: Build the Angular app ---
+FROM node:20 AS build
 WORKDIR /app
 
+# Copy dependency files and install
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
 
-
+# Copy source and build
 COPY . .
 RUN npm run build --prod
 
+# --- Stage 2: Serve via NGINX ---
 FROM nginx:stable-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
 
-# Expose port 80 to serve the app
+# Expose port 80
 EXPOSE 80
 
-# Run NGINX in the foreground
+# Run NGINX
 CMD ["nginx", "-g", "daemon off;"]
